# ContractSLM

./: .gitignore  Dockerfile  FINAL_SUBMISSION_SUMMARY.txt  HACKATHON_GUIDELINES.md  PRE_SUBMISSION_VALIDATION.md  README.md  SUBMISSION_CHECKLIST.md  app.py  environment.py  graders.py  idea.md  inference.py  multi_agent.py  openenv.yaml  pyproject.toml  requirements.txt  showcase.py  test_baseline.py  test_inference_mock.py  test_report.txt  validate_submission.py
data/: manifest.json
data/samples/task1/: deprecated_constructor.sol  missing_events.sol  missing_natspec.sol  missing_spdx.sol  old_pragma.sol  unused_variables.sol
data/samples/task2/: expensive_operations.sol  inefficient_loop.sol  poor_packing.sol  redundant_storage.sol  require_string.sol  unchecked_math.sol
data/samples/task3/: integer_overflow.sol  missing_access_control.sol  reentrancy.sol  tx_origin_auth.sol  unsafe_delegatecall.sol  weak_randomness.sol
server/: app.py
